# rust-rocket-simples

./: Cargo.toml  README-ADICOES.md  README.md  Rocket.toml  adicoesquefiznoprojeto.txt
database/: init.sql  migrate.sh
src/: main.rs
src/controllers/: clientes_controller.rs  home_controller.rs  mod.rs
src/database/: mod.rs
src/dtos/: cliente_dto.rs
src/models/: cliente.rs
src/repositorios/: cliente_repository.rs  mod.rs
src/servicos/: cliente_servico.rs
src/utils/: date_utils.rs
static/css/: bootstrap-icons.css  site.css
templates/clientes/: editar.html.tera  index.html.tera  novo.html.tera
templates/home/: index.html.tera
templates/layouts/: application.html.tera
templates/partials/: _footer.html.tera  _head.html.tera  _header.html.tera
