[package]
name = "rust-rocket-simples"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates ={ version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.45"

tokio = { version = "1.52.3", features = ["full"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "macros"
] }